增加数据库读写分离

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,15 @@
 server.servlet.context-path=/sales
 server.port= 8081
 
+spring.autoconfigure.exclude=com.alibaba.druid.spring.boot.autoconfigure.DruidDataSourceAutoConfigure
 ## database ##
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_sales?useSSL=false&useUnicode=true&characterEncoding=utf8
-spring.datasource.username=sales
-spring.datasource.password=sales
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_sales?useSSL=false&useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+
 
 #spring集成Mybatis环境
 #pojo别名扫描包
@@ -32,3 +35,23 @@ multipart.maxFileSize=10Mb
 # 设置所有文件最大内存
 multipart.maxRequestSize=50Mb
 #server.port=8989
+
+#d读写分离 master主库， slave从库，可使用主库写入，从库读 通过DS注解选择主从库，@DS("dsName")。没有DS使用默认数据源
+#primary 设置默认数据源
+spring.datasource.dynamic.primary=master
+spring.datasource.dynamic.strict=false
+spring.datasource.dynamic.datasource.master.url=jdbc:mysql://localhost:3306/db_sales?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.dynamic.datasource.master.username=root
+spring.datasource.dynamic.datasource.master.password=root
+spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.slave_1.url=jdbc:mysql://localhost:3306/db_sales?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.dynamic.datasource.slave_1.username=root
+spring.datasource.dynamic.datasource.slave_1.password=root
+spring.datasource.dynamic.datasource.slave_1.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.slave_2.url=jdbc:mysql://localhost:3306/db_sales?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.dynamic.datasource.slave_2.username=root
+spring.datasource.dynamic.datasource.slave_2.password=root
+spring.datasource.dynamic.datasource.slave_2.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.druid.stat-view-servlet.login-username=druid
+spring.datasource.druid.stat-view-servlet.login-password=druid
